@@ -1092,6 +1092,13 @@
 		<FONT COLOR=WHITE>@INIValue?MASK=REMORTRETAIN&INIHELP@
 		<A HREF="javascript:openUp2('ZAPPERMASKS')">Click here for Mask help</a>
 		</TD></TR>
+		
+		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>RACEMIXING</FONT>
+		</TD><TD WIDTH=80% VALIGN=TOP>
+		<INPUT TYPE=TEXT NAME=RACEMIXING SIZE=20 VALUE="@INIValue?MASK=RACEMIXING&VALUE@">
+		<BR>
+		<FONT COLOR=WHITE>@INIValue?MASK=RACEMIXING&INIHELP@
+		</TD></TR>
 		</TABLE>
 	@endif@
 	@if?CheckReqParm?INIPAGE=COMBAT@
