@@ -19,6 +19,7 @@
   18. New Achievements trigger: CLASSLEVELSGAINED -- several more achievements that use it also.
   19. MudChat now supports talking spontaneously on a schedule, and responses may contain scriptable funcs.
   20. Trailto now accepts full tracking flag set as arguments, as well as other new tweek settings
+  22. Rules for mixing races can now be tweeked a little.  See coffeemud.ini RACEMIXING.
   21. Can now add/item items directly to shopkeeper inventory from MUDGrinder!!!
 # Build 5.9.2 Released 02/09/2016
    1. Apprentice now gets bonus common skill.
